--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "browser-sync": "^2.10.0",
     "consolidate": "0.x",
     "express": "4.13.3",
+    "express-nunjucks": "^0.9.5",
     "express-writer": "0.0.4",
     "govuk_frontend_toolkit": "^4.2.1",
     "govuk_template_mustache": "^0.15.1",
@@ -24,9 +25,11 @@
     "grunt-sass": "^1.1.0",
     "grunt-text-replace": "0.3.12",
     "hogan.js": "3.0.2",
+    "marked": "^0.3.5",
     "minimist": "0.0.8",
     "node-sass": "3.3.3",
     "readdir": "0.0.6",
-    "serve-favicon": "2.3.0"
+    "serve-favicon": "2.3.0",
+    "underscore": "^1.8.3"
   }
 }
