Added prototype link
On the prove you can apply service. Username and password matches
conventions.

--- a/lib/projects/prove-you-can-apply.json
+++ b/lib/projects/prove-you-can-apply.json
@@ -15,5 +15,6 @@
       {"label":"Started", "date": "June 2016"}
     ]
   },
-  "priority":"Top"
+  "priority":"Top",
+  "prototype":"https://dwp-hrttriage.herokuapp.com/"
 }
