--- a/lib/projects/prove-you-can-apply.json
+++ b/lib/projects/prove-you-can-apply.json
@@ -5,7 +5,7 @@
   "theme": "Platforms",
   "location": "Stockport",
   "phase":"alpha",
-  "sro":"Nic Harrison",
+  "sro":"Kenny Robertson",
   "service_man":"TBC",
    "phase-history":{
     "discovery": [
