Update project status
All currently TBC

--- a/lib/projects/prove-you-can-apply.json
+++ b/lib/projects/prove-you-can-apply.json
@@ -15,6 +15,6 @@
       {"label":"Started", "date": "June 2016"}
     ]
   },
-  "priority":"Top",
+  "priority":"TBC",
   "prototype":"https://dwp-hrttriage.herokuapp.com/"
 }
